# MinetestMapperGUI

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  InnoSetupScript.iss  LICENSE  MinetestMapperGUI.desktop  MinetestMapperGui.in.desktop  MinetestMapperGui.in.rc  MinetestMapperGui.pro  README.md  bitbucket-pipelines.yml  colorlineedit.cpp  colorlineedit.h  colorstxtassistant.cpp  colorstxtassistant.h  colorstxtassistant.ui  colorstxtwizard.cpp  colorstxtwizard.h  configdialog.cpp  configdialog.h  configdialog.ui  drawmapfigure.cpp  drawmapfigure.h  drawmapfiguretablemodel.cpp  drawmapfiguretablemodel.cpp.autosave  drawmapfiguretablemodel.h  figuredelegate.cpp  figuredelegate.h  geometry.cpp  geometry.h  geometrywidget.cpp  geometrywidget.h  geometrywidget.ui  lgtm.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makecolors.cpp  (+9 more)
.github/workflows/: main.yml
colors/: colors-average-alpha.txt  colors-cumulative-alpha.txt  colors.txt
doc/: drawfigure.html  intro.html  intro.html.autosave  manual.htm  manual.html
images/: desktop.ini  icon.xcf  sources.txt
languages/: gui_de.ts  gui_en.ts
translations/: gui_de.ts  gui_en.ts
